--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //Dependencias del proyecto
-    //Intentando comentar con VCS firmado
+    implementation 'com.google.android:flexbox:2.0.1'
 
 }
