--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".Login"></activity>
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".menuNavegacion"
+            android:label="@string/title_activity_menu_navegacion"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".Login" />
         <activity android:name=".splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
