--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:name=".menuNavegacion"
             android:label="@string/title_activity_menu_navegacion"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".Login" />
         <activity android:name=".splash">
             <intent-filter>
