--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".layout.principal_maestro"></activity>
+        <activity android:name=".ChatActivity" />
         <activity android:name=".layout.ver_eventos_calendario" />
         <activity android:name=".layout.agregarEventos" />
         <activity android:name=".layout.calificaciones_activity" />
