--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".layout.menu_maestro"></activity>
+        <activity android:name=".layout.reportes_maestro"></activity>
+        <activity android:name=".layout.dashboard_clases" />
+        <activity android:name=".layout.aulavirtual_maestro" />
+        <activity android:name=".layout.menu_maestro" />
         <activity android:name=".layout.principal_maestro" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".layout.ver_eventos_calendario" />
