--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".layout.SubjectActivity"></activity>
+        <activity android:name=".layout.contenidos_maestro"></activity>
+        <activity android:name=".layout.agregar_modif_contenido" />
+        <activity android:name=".layout.SubjectActivity" />
         <activity android:name=".layout.AulaVirtualActivity" />
         <activity android:name=".layout.ReportViewerActivity" />
         <activity android:name=".layout.subirplanificaciones_maestro" />
