--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".layout.perfil_alumno"></activity>
+        <activity android:name=".layout.avisosSistema_modalumno"></activity>
+        <activity android:name=".layout.tareaspendientes_alumno" />
+        <activity android:name=".layout.perfil_alumno" />
         <activity android:name=".layout.OrientadoresActivity" />
-        <activity android:name=".layout.EditarOrientadorActivity"></activity>
+        <activity android:name=".layout.EditarOrientadorActivity" />
         <activity android:name=".layout.OrientadoresActivity" />
         <activity android:name=".layout.EditarGradoActivity" />
         <activity android:name=".layout.crearversiculo_admin" />
