--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".layout.crearnuevaactividad_maestro"></activity>
+        <activity android:name=".layout.eliminarplanificacion_maestro"></activity>
+        <activity android:name=".layout.crearnuevaactividad_maestro" />
         <activity android:name=".layout.administraractividades_maestro" />
         <activity android:name=".layout.crearnuevaprueba_maestro" />
         <activity android:name=".layout.adminstrarpruebas_maestro" />
