--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".layout.agregarmenu_admin"></activity>
+        <activity android:name=".layout.PonderacionAsignaturasActivity"></activity>
+        <activity android:name=".layout.agregarmenu_admin" />
         <activity android:name=".layout.dashboard_comidaAdmin" />
         <activity android:name=".layout.eliminarplanificacion_maestro" />
         <activity android:name=".layout.crearnuevaactividad_maestro" />
@@ -30,6 +31,7 @@
         <activity android:name=".layout.vercontenidoclases_maestro" />
         <activity android:name=".layout.eliminarcontenido_maestro" />
         <activity android:name=".layout.avisosSistema_modalumno" />
+        <activity android:name=".layout.PeriodosMateriasActivity" />
         <activity android:name=".layout.tareaspendientes_alumno" />
         <activity android:name=".layout.perfil_alumno" />
         <activity android:name=".layout.OrientadoresActivity" />
